added read/write mode toggle button in Editor class
changed List<Character> to byte[] type in all cipher and fixed in FileManager, CryptManager and other class

fixed saving and open files in FileManger class including write bytes to file

fixed opening file in tab in TabbedEditors class

added UA Caesar and Trithemius Cipher